--- a/five/src/styles/home.scss
+++ b/five/src/styles/home.scss
@@ -55,7 +55,8 @@
         }
 
         article {
-          margin: 2rem 0;
+          margin: 1rem 0;
+          
           width: 10rem;
           color: $color5;
           position: relative;
@@ -64,18 +65,20 @@
             content: "";
             background-color: $color4;
             width: 100%;
-            height: 5rem;
+            height: 100%;
             border-radius: 50px;
             position: absolute;
-            top: 20%;
-            left: 20%;
+            top: 10%;
+            left: 0%;
             z-index: -1;
           }
           > p {
             font: 900 2rem $text1;
+            left: 5%;
+            position: relative;
           }
           > span {
-            font: 500 1rem $text2;
+            font: 300 1rem $text2;
           }
         }
 
@@ -95,8 +98,8 @@
 
       &::after {
         content: "";
-        width: 40vmax;
-        height: 40vmax;
+        width: 35vmax;
+        height: 35vmax;
         background-color: $color3;
         position: absolute;
         z-index: -1;
@@ -106,7 +109,7 @@
       > img {
         width: 40vmax;
         object-fit: contain;
-        height: 40vmax;
+        height: 35vmax;
       }
     }
   }
