--- a/five/src/styles/app.scss
+++ b/five/src/styles/app.scss
@@ -1,33 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 @import "statics";
 @import "animations";
 @import "header";
-@import"home";
+@import "home";
 @import "work";
 @import "timeline";
 @import "services";
 @import "testimonial";
-@import "contact.scss";
+@import "contact";
+@import "footer";
+@import "mediaquery";
 
-
-*
-{
+* {
   margin: 0%;
   padding: 0%;
   font-family: $text2;
   box-sizing: border-box;
   scroll-behavior: smooth;
-
 }
-a{
+a {
   text-decoration: none;
 }
-body{
+
+body {
   background-color: $color1;
   overflow-x: hidden;
 }
-.disableBtn{
-  background-color: rgb(237,237,237);
-  cursor: not-allowed;
+
+.disableBtn {
+  color: $color6 !important;
+  background-color: rgb(191, 191, 191) !important;
+  cursor: not-allowed !important;
+}
+
+#customMessage {
+  font: 900 2rem $text2;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
